[package]
name = "a01_surrealdb01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
surrealdb = "1.1.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
